Fix create button firefox  compatibility

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@ button:hover {
 }
 
 #btn {
-  width: 138px;
+  width: 144px;
   height: 38px;
   color: floralwhite;
   font-size: 1.2rem;
